Reload the ranking on adding a game.

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,15 +1,3 @@
 <h1>Ranking of ladder {{ladder}}</h1>
-<game [ladder]="ladder">Loading.</game>
-<table *ngIf="ready" >
-  <tr>
-    <td></td>
-    <th>Name</th>
-    <th>Skill level</th>
-  </tr>
-  <tr *ngFor="let player of ranking; let index=index">
-    <th>{{index}}</th>    
-    <td>{{player.name}}</td>
-    <td>{{math.round(player.mu)}}</td>
-  </tr>
-</table>
-<p *ngIf="!ready">Loading ranking.</p>
+<game [ladder]="ladder" (onAdded)="this.reload()">Loading.</game>
+<ranking [ranking]="this.ranking" [ready]="this.ready">Loading.</ranking>
