--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -9,8 +9,7 @@
     Sidenav
   </md-sidenav>
   <div class="app-content">
-    <h1>Ranking of {{ladder}}</h1>
-    <ranking [ranking]="this.ranking" [ready]="this.ready">Loading.</ranking>
+    <ranking [ladder]="this.ladder">Loading.</ranking>
   </div>
 </md-sidenav-container>
 
