A component to display recent matches.

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -10,6 +10,7 @@
   </md-sidenav>
   <div class="app-content">
     <ranking [ladder]="this.ladder">Loading.</ranking>
+    <matches [ladder]="this.ladder">Loading.</matches>
   </div>
 </md-sidenav-container>
 
