--- a/web/src/app/create.component.html
+++ b/web/src/app/create.component.html
@@ -64,7 +64,7 @@
                      name="tau"></td>
         </tr>
       </table>
-      <button *ngIf="!submitting" type="submit">Create tde ladder</button>
+      <button *ngIf="!submitting" type="submit">Create the ladder</button>
       <md-progress-bar *ngIf="submitting" mode="indeterminate">
       </md-progress-bar>
     </form>
