--- a/web/src/app/game.component.html
+++ b/web/src/app/game.component.html
@@ -8,7 +8,7 @@
           <input type="text"
                  [(ngModel)]="players[team_index][player_index].name"
                  placeholder="Name of player {{player_index}}"
-                 name="name">
+                 name="name{{team_index}}.{{player_index}}">
         </td>
       </tr>
     </table>
