--- a/web/src/app/create.component.html
+++ b/web/src/app/create.component.html
@@ -65,7 +65,7 @@
                      name="sigma"></td>
         </tr>
         <tr>
-          <td>&beta; (skill distance witd 76% win chance)</td>
+          <td>&beta; (skill distance with 76% win chance)</td>
           <td><input type="number"
                      [(ngModel)]="beta"
                      min="1"
