Disallow holes in teams, #4 is feature-complete now.

--- a/web/src/app/game.component.html
+++ b/web/src/app/game.component.html
@@ -1,5 +1,5 @@
 <h1 md-dialog-title>Report a game in {{ladder}}</h1>
-<form (ngSubmit)="onSubmit()">
+<form (ngSubmit)="onSubmit()" #formCtrl="ngForm">
   <md-dialog-content>
     <table>
       <tr *ngFor="let team of players; let team_index=index">
@@ -8,13 +8,16 @@
           <input type="text"
                  [(ngModel)]="players[team_index][player_index].name"
                  placeholder="Name of player {{player_index}}"
-                 name="name{{team_index}}.{{player_index}}">
+                 name="name{{team_index}}.{{player_index}}"
+                 required>
         </td>
       </tr>
     </table>
   </md-dialog-content>
   <md-dialog-actions>
-    <button *ngIf="!submitting" type="submit">Report the game</button>
+    <button *ngIf="!submitting" type="submit" [disabled]="!formCtrl.form.valid">
+      Report the game
+    </button>
     <md-progress-bar *ngIf="submitting" mode="indeterminate">
     </md-progress-bar>
   </md-dialog-actions>
