--- a/web/src/app/game.component.html
+++ b/web/src/app/game.component.html
@@ -3,11 +3,14 @@
   <md-dialog-content>
     <table>
       <tr *ngFor="let team of players; let team_index=index">
-        <th>Team {{team_index}}</th>
+        <th *ngIf="team_index==0">Winner(s)</th>
+        <th *ngIf="team_index==1">2nd place</th>
+        <th *ngIf="team_index==2">3rd place</th>
+        <th *ngIf="team_index>=3">{{team_index+1}}th place</th>
         <td *ngFor="let player of team; let player_index=index">
           <input type="text"
                  [(ngModel)]="players[team_index][player_index].name"
-                 placeholder="Name of player {{player_index}}"
+                 placeholder="Player {{player_index+1}} in team {{team_index+1}}"
                  name="name{{team_index}}.{{player_index}}"
                  required>
         </td>
