--- a/web/src/app/matches.component.html
+++ b/web/src/app/matches.component.html
@@ -4,8 +4,12 @@
     <table *ngIf="ready">
       <tr>
         <th>Date</th>
-        <th>Winners</th>
-        <th>Losers</th>
+        <th *ngFor="let team of teamsHeader; let team_index=index">
+          <span *ngIf="team_index==0">Winner(s)</span>
+          <span *ngIf="team_index==1">2nd place</span>
+          <span *ngIf="team_index==2">3rd place</span>
+          <span *ngIf="team_index>=3">{{team_index+1}}th place</span>
+        </th>
         <th *ngIf="this.owned">Remove</th>
       </tr>
       <tr *ngFor="let match of matchList">
