Move templates around to have proper inheritance.

--- a/web/src/app/tos.html
+++ b/web/src/app/tos.html
@@ -1,3 +1,4 @@
+<div class="app-content">
 <h1>Terms of Service/Privacy Policy</h1>
 <p> Effective since: 2017-06-17.</p>
 <p>
@@ -47,3 +48,4 @@
     The service operator reserves the right to change these terms,
     at any point and with a 30 day prior notice displayed in the service.
 </p>
+</div>
