--- a/web/src/app/app.html
+++ b/web/src/app/app.html
@@ -8,16 +8,7 @@
   <md-sidenav #sidenav>
     <div class="g-signin2" data-scope="openid email"
       data-onsuccess="onSignIn"></div>
-    <div *ngIf="this.owned">Owner.</div>
     <button onclick="signOut();">Sign out</button>
   </md-sidenav>
-  <div class="app-content">
-    <app-ranking [ladder]="this.ladder">Loading.</app-ranking>
-    <app-matches [ladder]="this.ladder" [owned]="this.owned"
-       [id_token]="this.id_token">Loading.</app-matches>
-  </div>
+  <router-outlet></router-outlet>
 </md-sidenav-container>
-
-<span class="app-action">
-  <button md-fab (click)="openGameDialog()"><md-icon>add</md-icon></button>
-</span>
