Add an old-style footer.

--- a/web/src/app/app.html
+++ b/web/src/app/app.html
@@ -11,4 +11,10 @@
     <button onclick="signOut();">Sign out</button>
   </md-sidenav>
   <router-outlet></router-outlet>
+  <footer>
+    © 2017 
+    <a href="http://lrem.net/">Remigiusz 'lRem' Modrzejewski</a>.
+    Use of this site constitutes acceptance of the
+    <a href="/tos">Terms of Service/Privacy Policy</a>.
+  </footer>
 </md-sidenav-container>
