List owned ladders on the landing page, close #15.

--- a/web/src/app/landing.html
+++ b/web/src/app/landing.html
@@ -1,9 +1,10 @@
 <md-card class="right">
   <md-card-title>
-    Already have a ladder?
+    Already on a ladder?
   </md-card-title>
   <md-card-content>
     <app-finder></app-finder>
+    <app-owned-list></app-owned-list>
   </md-card-content>
 </md-card>
 
