--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -1,7 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
-
 body {
     min-height: 42em;
+    margin: 0;
 }
 
 .app-content {
