--- a/web/src/app/game.html
+++ b/web/src/app/game.html
@@ -8,11 +8,12 @@
         <th *ngIf="team_index==2">3rd place</th>
         <th *ngIf="team_index>=3">{{team_index+1}}th place</th>
         <td *ngFor="let player of team; let player_index=index">
-          <input type="text"
-                 [(ngModel)]="players[team_index][player_index].name"
-                 placeholder="Player {{player_index+1}} in team {{team_index+1}}"
-                 name="name{{team_index}}.{{player_index}}"
-                 required>
+          <app-suggest-players 
+            [ladder]="ladder"
+            [players]="players"
+            [player_index]="player_index" 
+            [team_index]="team_index">
+          </app-suggest-players>
         </td>
       </tr>
     </table>
