Display build number in the UI.

--- a/web/src/app/app.html
+++ b/web/src/app/app.html
@@ -9,6 +9,7 @@
     <div class="g-signin2" data-scope="openid email"
       data-onsuccess="onSignIn"></div>
     <button onclick="signOut();">Sign out</button>
+    <p>Build: {{version}}</p>
   </md-sidenav>
   <router-outlet></router-outlet>
   <footer>
