--- a/web/src/app/create.html
+++ b/web/src/app/create.html
@@ -70,8 +70,8 @@
       </tr>
     </table>
     <button *ngIf="!submitting" type="submit">Create the ladder</button>
-    <md-progress-bar *ngIf="submitting" mode="indeterminate">
-    </md-progress-bar>
+    <mat-progress-bar *ngIf="submitting" mode="indeterminate">
+    </mat-progress-bar>
   </form>
 
   <p>
