--- a/web/src/app/finder.html
+++ b/web/src/app/finder.html
@@ -1,2 +1,2 @@
 <input type="text" placeholder="Name of the ladder" [(ngModel)]="name">
-<button md-button (click)="go()">Go!</button>
+<button mat-button (click)="go()">Go!</button>
