--- a/web/src/app/ladder.html
+++ b/web/src/app/ladder.html
@@ -5,5 +5,5 @@
   </div>
 
 <span class="app-action">
-  <button md-fab (click)="openGameDialog()"><md-icon>add</md-icon></button>
+  <button mat-fab (click)="openGameDialog()"><mat-icon>add</mat-icon></button>
 </span>
