--- a/web/src/app/landing.html
+++ b/web/src/app/landing.html
@@ -1,18 +1,18 @@
-<md-card class="right">
-  <md-card-title>
+<mat-card class="right">
+  <mat-card-title>
     Already on a ladder?
-  </md-card-title>
-  <md-card-content>
+  </mat-card-title>
+  <mat-card-content>
     <app-finder></app-finder>
     <app-owned-list></app-owned-list>
-  </md-card-content>
-</md-card>
+  </mat-card-content>
+</mat-card>
 
-<md-card>
-  <md-card-title>
+<mat-card>
+  <mat-card-title>
     Custom ranked ladders
-  </md-card-title>
-  <md-card-content>
+  </mat-card-title>
+  <mat-card-content>
     <em>Ladders</em> is a free service that allows you to track your own custom
     leagues.
     It uses the patented 
@@ -23,18 +23,18 @@
     <a href="https://en.wikipedia.org/wiki/Elo_rating_system">Elo</a>,
     the rating system widely used in chess and similar games,
     except here you can have games with any number of teams and players.
-  </md-card-content>
-</md-card>
+  </mat-card-content>
+</mat-card>
 
-<md-card>
-  <md-card-title>
+<mat-card>
+  <mat-card-title>
     Get started
-  </md-card-title>
-  <md-card-content>
+  </mat-card-title>
+  <mat-card-content>
     All you need is to know are the rules of the game you are playing...
     And have an idea for a name of your custom ranked ladder.
-  </md-card-content>
-  <md-card-actions>
-    <a href="/create" md-button>Create a new ladder!</a>
-  </md-card-actions>
-</md-card>
+  </mat-card-content>
+  <mat-card-actions>
+    <a href="/create" mat-button>Create a new ladder!</a>
+  </mat-card-actions>
+</mat-card>
