--- a/web/src/app/owned.html
+++ b/web/src/app/owned.html
@@ -1,8 +1,8 @@
 <div *ngIf="landlord">
     Owned ladders:
-    <md-list>
-        <md-list-item *ngFor="let estate of estates;">
+    <mat-list>
+        <mat-list-item *ngFor="let estate of estates;">
             <a href="/ladder/{{estate}}">{{estate}}</a>
-        </md-list-item>
-    </md-list>
+        </mat-list-item>
+    </mat-list>
 </div>
