--- a/web/src/app/ranking.html
+++ b/web/src/app/ranking.html
@@ -1,6 +1,6 @@
-<md-card>
-  <md-card-title>Ranking of {{ladder}}</md-card-title>
-  <md-card-content>
+<mat-card>
+  <mat-card-title>Ranking of {{ladder}}</mat-card-title>
+  <mat-card-content>
     <table *ngIf="ready">
       <tr>
         <td></td>
@@ -14,9 +14,9 @@
         <td>{{math.round(player.mu)}}</td>
         <td>{{player.wins_count}}/{{player.games_count}}
            ({{math.round(100 * player.wins_count / player.games_count)}}%)</td>
-        <td><button md-raised-button (click)="showHistory(player.name)">History</button></td>
+        <td><button mat-raised-button (click)="showHistory(player.name)">History</button></td>
       </tr>
     </table>
     <p *ngIf="!ready">Loading ranking.</p>
-  </md-card-content>
-</md-card>
+  </mat-card-content>
+</mat-card>
